tests/invalid_operator.c
//@FAIL
int main() {
    int x = 10 @ 5;
    return 0;
}